# p2purr

./: .gitignore  CMakeLists.txt  TODO  classheader.hpp  exceptionhandler.hpp  main.cpp  p2pconn.cpp  p2pconn.hpp
include/: exceptionhandler.h  global_config.h  localpeer.h  p2purr_chat.h  p2purr_server.h  packet.h  peerconnhandler.h  serializer.h  sockethelper.h
src/: localpeer.cpp  p2pconn.cpp  p2purr_chat.cpp  p2purr_server.cpp  packet.cpp  peerconnhandler.cpp  serializer.cpp  sockethelper.cpp
src/include/: exceptionhandler.h  localpeer.h  p2pconn.h  packet.h  peerconnhandler.h  sockethelper.h
tests/: p2purr_tests.cpp  packet_tests.cpp  serializer_tests.cpp  test.h  test_globals.h  test_helpers.cpp  test_helpers.h  test_local_server.cpp  test_server.cpp
